Take into account changes to pilecv4j